compiling_error.txt
C:\Users\Randy\Git projects\chess.c: In function 'playerMenu':
C:\Users\Randy\Git projects\chess.c:80:22: error: expected expression before 'struct'
         playStandard(struct player a, struct player b);
                      ^
C:\Users\Randy\Git projects\chess.c:80:9: error: too few arguments to function 'playStandard'
         playStandard(struct player a, struct player b);
         ^
C:\Users\Randy\Git projects\chess.c:44:6: note: declared here
 void playStandard(struct player a, struct player b);
      ^
C:\Users\Randy\Git projects\chess.c: At top level:
C:\Users\Randy\Git projects\chess.c:88:1: error: expected identifier or '(' before '}' token
 }
 ^
C:\Users\Randy\Git projects\chess.c:89:6: error: conflicting types for 'createProfile'
 void createProfile(FILE * fp,char username[LENGTH]) {
      ^
C:\Users\Randy\Git projects\chess.c:43:6: note: previous declaration of 'createProfile' was here
 void createProfile(char username[LENGTH]);
      ^
C:\Users\Randy\Git projects\chess.c: In function 'createProfile':
C:\Users\Randy\Git projects\chess.c:92:11: warning: passing argument 1 of 'fprintf' from incompatible pointer type [-Wincompatible-pointer-types]
   fprintf("%s ",username);
           ^
In file included from C:\Users\Randy\Git projects\chess.c:5:0:
C:/TDM-GCC-64/x86_64-w64-mingw32/include/stdio.h:377:15: note: expected 'FILE * restrict {aka struct _iobuf * restrict}' but argument is of type 'char *'
   int __cdecl fprintf(FILE * __restrict__ _File,const char * __restrict__ _Format,...);
               ^
C:\Users\Randy\Git projects\chess.c: At top level:
C:\Users\Randy\Git projects\chess.c:102:50: error: redefinition of parameter 'a'
 void playStandard(struct player a, struct player a) {//DEPENDS ON PRINTOUT LOCATIONS!!!
                                                  ^
C:\Users\Randy\Git projects\chess.c:102:33: note: previous definition of 'a' was here
 void playStandard(struct player a, struct player a) {//DEPENDS ON PRINTOUT LOCATIONS!!!
                                 ^
C:\Users\Randy\Git projects\chess.c: In function 'playStandard':
C:\Users\Randy\Git projects\chess.c:109:17: warning: passing argument 1 of 'boardStandard' makes pointer from integer without a cast [-Wint-conversion]
   boardStandard(standardboard[8][8]);
                 ^
C:\Users\Randy\Git projects\chess.c:29:6: note: expected 'char (*)[8]' but argument is of type 'char'
 void boardStandard(char board[8][8]);
      ^
C:\Users\Randy\Git projects\chess.c:111:18: warning: passing argument 1 of 'displayBoard' makes pointer from integer without a cast [-Wint-conversion]
     displayBoard(standardboard[8][8]);
                  ^
C:\Users\Randy\Git projects\chess.c:30:6: note: expected 'char (*)[8]' but argument is of type 'char'
 void displayBoard(char board[8][8]);
      ^
C:\Users\Randy\Git projects\chess.c:114:15: error: invalid operands to binary & (have 'char *' and 'int')
     scanf("%d"&initialy); //^^
               ^
C:\Users\Randy\Git projects\chess.c:118:10: warning: passing argument 1 of 'move' makes pointer from integer without a cast [-Wint-conversion]
     move(standardboard[8][8], initialx, initialy, finalx, finaly);
          ^
C:\Users\Randy\Git projects\chess.c:37:6: note: expected 'char (*)[8]' but argument is of type 'char'
 char move(char board[8][8], int initx, int inity, int x, int y);
      ^
C:\Users\Randy\Git projects\chess.c: At top level:
C:\Users\Randy\Git projects\chess.c:170:6: error: conflicting types for 'move'
 void move(char board[8][8], int initx, int inity, int x, int y) {
      ^
C:\Users\Randy\Git projects\chess.c:37:6: note: previous declaration of 'move' was here
 char move(char board[8][8], int initx, int inity, int x, int y);
      ^
C:\Users\Randy\Git projects\chess.c: In function 'move':
C:\Users\Randy\Git projects\chess.c:176:21: warning: passing argument 1 of 'knight' makes pointer from integer without a cast [-Wint-conversion]
       flag = knight(board[8][8],initx,inity,x,y);
                     ^
C:\Users\Randy\Git projects\chess.c:31:5: note: expected 'char (*)[8]' but argument is of type 'char'
 int knight(char board[8][8], int initx, int inity, int x, int y);
     ^
C:\Users\Randy\Git projects\chess.c:178:20: error: expected ':' or '...' before '{' token
     case('q'||'Q') {
                    ^
C:\Users\Randy\Git projects\chess.c:179:20: warning: passing argument 1 of 'queen' makes pointer from integer without a cast [-Wint-conversion]
       flag = queen(board[8][8],initx,inity,x,y);
                    ^
C:\Users\Randy\Git projects\chess.c:32:5: note: expected 'char (*)[8]' but argument is of type 'char'
 int queen(char board[8][8], int initx, int inity, int x, int y);
     ^
C:\Users\Randy\Git projects\chess.c:181:20: error: expected ':' or '...' before '{' token
     case('k'||'K') {
                    ^
C:\Users\Randy\Git projects\chess.c:182:19: warning: passing argument 1 of 'king' makes pointer from integer without a cast [-Wint-conversion]
       flag = king(board[8][8],initx,inity,x,y);
                   ^
C:\Users\Randy\Git projects\chess.c:33:5: note: expected 'char (*)[8]' but argument is of type 'char'
 int king(char board[8][8], int initx, int inity, int x, int y);
     ^
C:\Users\Randy\Git projects\chess.c:184:20: error: expected ':' or '...' before '{' token
     case('r'||'R') {
                    ^
C:\Users\Randy\Git projects\chess.c:185:19: warning: passing argument 1 of 'rook' makes pointer from integer without a cast [-Wint-conversion]
       flag = rook(board[8][8],initx,inity,x,y);
                   ^
C:\Users\Randy\Git projects\chess.c:34:5: note: expected 'char (*)[8]' but argument is of type 'char'
 int rook(char board[8][8], int initx, int inity, int x, int y);
     ^
C:\Users\Randy\Git projects\chess.c:187:20: error: expected ':' or '...' before '{' token
     case('b'||'B') {
                    ^
C:\Users\Randy\Git projects\chess.c:188:21: warning: passing argument 1 of 'bishop' makes pointer from integer without a cast [-Wint-conversion]
       flag = bishop(board[8][8],initx,inity,x,y);
                     ^
C:\Users\Randy\Git projects\chess.c:35:5: note: expected 'char (*)[8]' but argument is of type 'char'
 int bishop(char board[8][8], int initx, int inity, int x, int y);
     ^
C:\Users\Randy\Git projects\chess.c:190:20: error: expected ':' or '...' before '{' token
     case('p'||'P') {
                    ^
C:\Users\Randy\Git projects\chess.c:191:19: warning: passing argument 1 of 'pawn' makes pointer from integer without a cast [-Wint-conversion]
       flag = pawn(board[8][8],initx,inity,x,y);
                   ^
C:\Users\Randy\Git projects\chess.c:36:5: note: expected 'char (*)[8]' but argument is of type 'char'
 int pawn(char board[8][8], int initx, int inity, int x, int y);
     ^
C:\Users\Randy\Git projects\chess.c: In function 'promote':
C:\Users\Randy\Git projects\chess.c:208:3: error: expected ';' before 'scanf'
   scanf("%c",&piece);
   ^
